# nanoarrow-rs

./: Cargo.toml  build.rs  uzlib_c_example.c
src/: Message_generated.rs  Schema_generated.rs  SparseTensor_generated.rs  Tensor_generated.rs  buffer_slice.rs  deflate.rs  flight.rs  flight_test.rs  grpc.rs  hpack.rs  http2.rs  lib.rs  record_batch_swapchain.rs  scalar_array.rs  time_series_record_batch.rs
