[package]
name = "nanoarrow-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "nanoarrow"
path = "src/lib.rs"

[[bin]]
name = "flight-test"
path = "src/flight_test.rs"
required-features = ["flight-test"]

[dependencies]
flatbuffers = "24.3.25"
embedded-io-async = "0.6"
embedded-nal-async = "0.7.1"
bytes = "1.6.0"
femtopb = "0.4.5"
log = "0.4.21"
typenum = "1.17.0"
miniz_oxide = "0.7.3"
embassy-sync = {version = "0.6.0"}
defmt = "0.3"
std-embedded-nal-async = { version = "0.2.0", optional=true }
async-std = { version="1.12.0", optional=true, features=["attributes"] }
embassy-executor = { version = "0.5.0", features = ["executor-thread"] }
embassy-time  = {version = "0.3.1", features = ["std", "generic-queue"]}
embassy-futures = {version = "0.1.1"}


[build-dependencies]
femtopb-build = "0.4.5"
anyhow = "1.0.86"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
arrow = "52.0.0"
arrow-flight = "52.0.0"
hpack-patched = "0.3.0"

[features]
default = []
std = []
flight-test = ["std", "embassy-executor/arch-std", "embassy-time/std", "std-embedded-nal-async", "async-std", "embassy-executor/task-arena-size-786432"]
